# template-package

./: README.md  pyproject.toml  setup.py  setup.py_unneeded
template_package/: __init__.py  module.py  run.py
template_package.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
template_package/template_subpackage/: __init__.py  submodule.py
